Fixed spacing issue

--- a/styles.css
+++ b/styles.css
@@ -84,7 +84,7 @@ th {
     gap: 100px 50px;
     scroll-margin-top: 100px;
     position: absolute;
-    top: 200%;
+    top: 210%;
     left: 50%;
     transform: translateX(-50%);
     z-index: 2;
